@@ -1,3 +1,5 @@
+* Remove unneeded Chrome fix for Fuse.String#replace as well as the STRING_REPLACE_BUGGY_WITH_GLOBAL_FLAG_AND_EMPTY_PATTERN feature detection. [jddalton]
+
 * Optimize Fuse.String#replace and ensure it follows specification with regard to setting the pattern.lastIndex. [jddalton, Samuel Lebeau]
 
 * Remove unneeded IE8 RC1 fork in Fuse.List.fromNodeList(). [Diego Perini]
